--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ a { cursor: pointer; color: var(--color-pale); }
 a:hover { color: white; }
 
 #view { min-height:100%; position:relative; transition: all 200ms; }
-#header { display: block; position: relative; background-color: var(--color-almostblack); width: 100%; min-height: 120px; }
+#header { display: block; position: relative; width: 100%; min-height: 120px; }
 #header #photo { display: block; position: relative; width:100%; height: 91vh; max-height: 1080px; -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; transition: all 150ms; }
         .logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
 #header #logo { display: block; position: fixed; z-index: 200; width: 35px; height: 35px; top: 40px; left: 40px; }
@@ -23,7 +23,7 @@ a:hover { color: white; }
 #header iframe { width: 100%; height: 100%; overflow: hidden; }
 #header #title { display: block; font-size: 3em; font-family: 'SourceSansPro_Bold'; color: var(--color-accent); position: absolute; top: initial; bottom: 40px; left: 40px; }
 
-#footer { display: block; position:absolute; bottom: 0; width: 100%; background-color: var(--color-almostblack); padding: 0px 40px; }
+#footer { display: block; position:absolute; bottom: 0; width: 100%; padding: 0px 40px; }
 #footerwrap { display: inline-block; width: 100%; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #fff; }
 #footerwrap .logo { width: 17px; height: 30px; margin: none; float: left; }
 #footerwrap .credit { display: inline-block; margin-left: 20px; font-size: 14px; }
