--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@ body { font-family: 'SourceSansPro_Regular'; background-color: var(--color-almos
 a { cursor: pointer; color: var(--color-pale); }
 a:hover { color: white; }
 
+#sense { display: block; z-index: -100; position: absolute; width: 100%; height: 100%; top: 0; right: 0; bottom: 0; left: 0; background-size: cover; background-position: center center; background-repeat: no-repeat; }
 #view { min-height:100%; position:relative; transition: all 200ms; }
 #header { display: block; position: relative; width: 100%; min-height: 120px; }
 #header #photo { display: block; position: relative; width:100%; height: 91vh; max-height: 1080px; -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; transition: all 150ms; }
@@ -21,7 +22,6 @@ a:hover { color: white; }
 #header #logo { display: block; position: fixed; z-index: 200; width: 35px; height: 35px; top: 40px; left: 40px; }
 #header #logo.sticky { position: absolute; top: initial; bottom: 44px }
 #header iframe { width: 100%; height: 100%; overflow: hidden; }
-#header #title { display: block; font-size: 3em; font-family: 'SourceSansPro_Bold'; color: var(--color-accent); position: absolute; top: initial; bottom: 40px; left: 40px; }
 
 #footer { display: block; position:absolute; bottom: 0; width: 100%; padding: 0px 40px; }
 #footerwrap { display: inline-block; width: 100%; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #fff; }
