--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,8 +104,8 @@ a:hover { color: white; }
 #content p code { display: inline; padding: 0 6px; font-size: 0.85em; font-family: 'SourceSansPro_Light'; background-color: #444; position: relative; }
 #content code comment { color:#60cc60; }
 
-#content #gallery { display: block; -webkit-column-count: 3; -moz-column-count: 3; column-count: 3; -webkit-column-width: 33%; -moz-column-width: 33%; column-width: 33%; column-gap: 1px;  }
-#content #gallery.image { display: block; }
+#content #gallery { display: block; margin-bottom: 40px; line-height: 0; -webkit-column-count: 3; -moz-column-count: 3; column-count: 3; -webkit-column-width: 33%; -moz-column-width: 33%; column-width: 33%; column-gap: 2px;  }
+#content #gallery .image { display: block; margin-bottom: 2px;}
 #content #gallery img { max-width: 100%; height: auto; }
 
 /* widths */
