--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,7 +70,7 @@ h2 a:hover:after, .topicblock a:hover:after { margin-right: 2px; content: " •"
 #content p:last-child { margin-bottom: 20px; }
 
 #content iframe { display: block; margin: 20px 0px 40px 0px; overflow: hidden;}
-#content img.inline { display: inline-block; width: 100%; margin: 20px 0 20px 0; }
+#content img.inline, video { display: inline-block; width: 100%; margin: 20px 0 20px 0; }
 
 #content .thumbbg { display: block; float: left; width: 192px; height: 120px; margin: 0 20px 0 0; background-color: black; }
 #content .thumb { display: block; width: 100%; height: 100%; background-blend-mode: hard-light; mix-blend-mode: multiply; }
