--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,14 +15,14 @@ a { cursor: pointer; color: var(--color-pale); }
 a:hover { color: white; }
 #content hr { display: block; margin: 40px 0 20px 0; border: 1px solid var(--color-pale); }
 
-.logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
+.logo { background-image: url("../svg/eyehat.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
 
 #sense { display: block; z-index: -100; position: absolute; width: 100%; height: 100%; top: 0; right: 0; bottom: 0; left: 0; background-size: cover; background-position: center center; background-repeat: no-repeat; }
 #view { min-height: 100%; position:relative; transition: all 200ms; }
 #header { display: block; position: relative; width: 100%; min-height: 120px; }
 #header #photo { display: block; position: relative; width:100%; height: 91vh; max-height: 1080px; -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; transition: all 150ms; }
 #header video {  position: fixed; top: 50%; left: 50%; width: auto; height: auto; z-index: -100; transform: translate(-50%, -50%); }
-#header #logo { display: block; position: fixed; z-index: 200; width: 35px; height: 35px; top: 40px; left: 40px; }
+#header #logo { display: block; position: fixed; z-index: 200; width: 100px; height: 100px; top: 40px; left: 40px; }
 #header #logo.sticky { position: absolute; top: initial; bottom: 44px }
 #header iframe { width: 100%; height: 100%; overflow: hidden; }
 
